# webrtc-audio-processing-cmake

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  RELEASING.md  meson.build
example/: CMakeLists.txt  aec3_demo.cpp
subprojects/: abseil-cpp.wrap
webrtc/: CMakeLists.txt
webrtc/api/: CMakeLists.txt
webrtc/audio/: CMakeLists.txt
webrtc/common_audio/: CMakeLists.txt  meson.build
webrtc/modules/: CMakeLists.txt
webrtc/modules/audio_coding/: meson.build
webrtc/modules/audio_processing/: meson.build
webrtc/rtc_base/: CMakeLists.txt  meson.build
webrtc/system_wrappers/: CMakeLists.txt
webrtc/wrapper/: webrtc_apm_wrapper.cpp  webrtc_apm_wrapper.h
